# python-bindings

./: .gitignore  README.md  main.py
native/: CMakeLists.txt  __init__.py  python_module.py  some_native_lib.cpp
